import 'package:training_note/models/exercise.dart';

class Approach {
  final Exercise excercise;
  final int repeats;

  Approach({required this.excercise, required this.repeats});
}
